# proxycast

./: .gitignore  README.md  TERM_SCROLLBACK_TOOL.md  package-lock.json  package.json  sync-resources.sh
.github/workflows/: release.yml  update-homebrew.yml
docs/: three-stage-workflow-guide.md
homebrew/: README.md
homebrew/Casks/: proxycast.rb
homebrew/scripts/: update-cask.sh
scripts/playwright/: browser-tool.mjs  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/models/: provider_pool_model.rs  provider_type.rs
src-tauri/resources/models/: index.json
src-tauri/src/: lib.rs  server.rs  server_utils.rs
src-tauri/src/agent/: aster_agent.rs  aster_state.rs  event_converter.rs  mod.rs  native_agent.rs  tool_loop.rs  types.rs
src-tauri/src/app/: bootstrap.rs  runner.rs  setup.rs  state.rs
src-tauri/src/commands/: agent_cmd.rs  aster_agent_cmd.rs  (+22 more)
src/components/: AppSidebar.tsx  Dashboard.tsx  README.md
src/contexts/: ComponentDebugContext.tsx
src/hooks/: useAliasConfig.ts  useConfiguredProviders.ts  useProviderModels.ts  useProviderPool.ts  useSwitch.ts  useTauri.ts  useThreeStageWorkflow.ts
src/i18n/: I18nPatchProvider.tsx  README.md  dynamic-translation.ts  index.ts  withI18nPatch.tsx
src/lib/: README.md  connection-api.ts  notificationService.ts  terminal-api.ts  webview-api.ts
src/pages/: FlowMonitorPage.tsx  index.ts  screenshot-chat.css  screenshot-chat.tsx
src/stores/: agentStore.ts  index.ts
src/types/: page.ts
(+369 files in other folders)
